# slide-tc

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
src/slide_tc/: __init__.py  jigsaw.py  np_utils.py
tests/: conftest.py  test_jigsaw.py
